--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "hello-typescript",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "app.ts",
   "license": "MIT",
   "devDependencies": {
     "jest": "^26.6.3",
