--- a/package.json
+++ b/package.json
@@ -1,14 +1,21 @@
 {
-  "name": "hello-typescript",
+  "name": "scritchies",
   "version": "1.0.0",
   "main": "app.ts",
   "license": "MIT",
+  "type": "module",
   "scripts": {
+    "build": "npx -p typescript tsc --build",
+    "start-badges": "node src/badges/BadgesHttpApi.js",
     "test": "jest"
   },
   "devDependencies": {
+    "@types/express": "^4.17.9",
     "jest": "^26.6.3",
     "ts-jest": "^26.4.4",
     "typescript": "^4.1.2"
+  },
+  "dependencies": {
+    "express": "^4.17.1"
   }
 }
